--- a/acm-root/namespaces/mdm/dev/mra-asm/mra/namespace.yaml
+++ b/acm-root/namespaces/mdm/dev/mra-asm/mra/namespace.yaml
@@ -4,7 +4,8 @@ kind: Namespace
 metadata:
   name: mra
   annotations:
-    configmanagement.gke.io/cluster-selector: mdm-dev-clusters
+    configsync.gke.io/cluster-name-selector: askdemocluster1
+    #configmanagement.gke.io/cluster-selector: mdm-dev-clusters
   labels:
     istio-injection: enabled
     owned-by-businessunit: mdm
