--- a/acm-root/namespaces/mdm/dev/mdm-gateway-asm/mdm-gateway/namespace.yaml
+++ b/acm-root/namespaces/mdm/dev/mdm-gateway-asm/mdm-gateway/namespace.yaml
@@ -4,7 +4,7 @@ kind: Namespace
 metadata:
   name: mdm-gateway
   annotations:
-    configmanagement.gke.io/cluster-selector: mdm-common-clusters
+    configmanagement.gke.io/cluster-selector: mdm-dev-clusters
   labels:
     istio-injection: enabled
     owned-by-businessunit: mdm
